--- a/thesis.html
+++ b/thesis.html
@@ -26,7 +26,7 @@
         <div id="main">
         <div id="video">
             <video width="100%" autoplay loop muted>
-                <source src="Images/Collage01.mp4" type="video/mp4"></video>
+                <source src="Collage01.mp4" type="video/mp4"></video>
         </div>
         
         <div id="drawer">
