--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     
     <body onload="isDark();">
         <div class="topnav">
-            <a href="thesis.html">Home</a>
+            <a href="index.html">Home</a>
             <a class="active"  href="#gallery">Gallery</a>
         </div>
         
