--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
         </div>
             <div id="emojiCounter">
-                <input type="image" src="Images/like.png" id="likeEmote" onclick="document.getElementById('reactHidden').style.display='block';">              
+                <input type="image" src="like.png" id="likeEmote" onclick="document.getElementById('reactHidden').style.display='block';">              
             </div>
         </div>
     </body>
