--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
     </head>
     
-    <body onload="isDark();">
+    <body onload="isDark(); load();">
         <div class="topnav">
              <a class="active" href="#home">Home</a>
             <a href="gallery.html">Gallery</a>
