--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
         
     </head>
     
-    <body onload="isDark();">
+    <body onload="isDark(); load();">
         <div class="topnav">
             <a href="index.html">Home</a>
             <a class="active"  href="#gallery">Gallery</a>
