--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="main">
         <div id="video">
             <video width="100%" autoplay loop muted>
-                <source src="Collage01.mp4" type="video/mp4"></video>
+                <source src="Collage-darkonwhite.mp4" type="video/mp4"></video>
         </div>
         
         <div id="drawer">
