--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="topnav">
              <a class="active" href="#home">Home</a>
             <a href="gallery.html">Gallery</a>
+            <a href="gif.html">GIFs</a>
         </div>
         <div id="toggle-switch" style="position:absolute; right:6%; top:3%; z-index:1;">
              <label class="switch" for="checkbox">
@@ -27,7 +28,7 @@
         <div id="main">
         <div id="video">
             <video width="100%" autoplay loop muted>
-                <source src="Collage-darkonwhite.mp4" type="video/mp4"></video>
+                <source src="https://vimeo.com/778724493" type="video/mp4" id="toggleVid"></video>
         </div>
         
         <div id="drawer">
