--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Error 401</title>
+        <title>Ambivalence</title>
          <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
         
@@ -16,6 +16,7 @@
         <div class="topnav">
             <a href="index.html">Home</a>
             <a class="active"  href="#gallery">Gallery</a>
+            <a href="gif.html">GIFs</a>
         </div>
         
         <div id="toggle-switch" style="position:absolute; right:6%; top:3%; z-index:1;">
