--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                 </div>
         
         <div id="main">
-        <div id="video">
-            <video width="100%" autoplay loop muted>
-                <source src="https://vimeo.com/778724493" type="video/mp4" id="toggleVid"></video>
-        </div>
+        <div style="padding:54.55% 0 0 0;position:absolute; top:1%; width: 75%;">
+                <iframe id="toggleVid" src="https://player.vimeo.com/video/778724493?h=9ee3605c84&amp;badge=0&amp;autoplay=1&amp;player_id=0&amp;mute=1&amp;loop=1&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Collage-darkonwhite.mp4">
+                </iframe>
+            </div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
         
         <div id="drawer">
             <div id="scroll">
