--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="toggle-switch" style="position:absolute; right:6%; top:3%; z-index:1;">
              <label class="switch" for="checkbox">
-                <input type="checkbox" id="checkbox" onclick="darkMode();toggleImage(); save()">
+                <input type="checkbox" id="checkbox" onclick="darkMode();toggleImage(); toggleVideo(); save()">
                 <span class="slider round"></span>
                 </label>
                 </div>
