--- a/gif.html
+++ b/gif.html
@@ -12,7 +12,7 @@
         
     </head>
     
-    <body onload="isDark(); load();">
+    <body onload="isDark2(); load();">
         <div class="topnav">
             <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
