--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     </head>
     
-    <body onload="isDark(); load();">
+    <body onload="isDarkHome(); load();">
         <div class="topnav">
              <a class="active" href="#home">Home</a>
             <a href="gallery.html">Gallery</a>
